# cunit

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  Taskfile.yml
.github/workflows/: release.yml
cmake/: OptionVariables.cmake  ProjectConfig.cmake
example/: CMakeLists.txt  collect_mode.c
include/cunit/: def.h
src/: compare.c  once.h  suite.c
